crates/flir-cli/tests/integration/snapshots/integration__rules__one_non_existing_selected_rule.snap
---
source: crates/flir-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").arg(\"--select-rules\").arg(\"foo\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules in `--select-rules`: foo

----- args -----
. --select-rules foo
