crates/flir-cli/tests/integration/snapshots/integration__rules__several_non_existing_selected_rules.snap
---
source: crates/flir-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").arg(\"--select-rules\").arg(\"foo,any_is_na,barbaz\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules in `--select-rules`: foo, barbaz

----- args -----
. --select-rules foo,any_is_na,barbaz
